# warp-lang

./: .gitignore  CLEANUPS.md  CMakeLists.txt  LICENSE.md  Makefile  README.md  Test.java  analyzer.c  analyzer.h  bytecode.c  bytecode.h  compiler.c  compiler.h  core.lsp  errors-example.c  errors.c  errors.h  example.ss  expander.c  expander.h  lexer-repl.c  lexer.c  lexer.h  notes.txt  parser.c  pool.c  pool.h  print.c  print.h  reader.c  reader.h  repl-main.c  repl.c  repl.h  runtime.h  scratch.lsp  source.h  test.c  utils.c  utils.h  (+5 more)
bootstrap/: analyzer.c  analyzer.h  ast.c  ast.h  compiler.c  compiler.h  expander.c  expander.h  lexer-repl.c  lexer.c  lexer.h  pool.c  pool.h  print.c  print.h  reader.c  reader.h  repl-main.c  repl.c  repl.h  utils.c  utils.h
doit-lisp/: README.md  design.org  lexer.c  old.c
goober-lisp/: core.el
goober-lisp/cmd/test/: main.go
goober-lisp/goober/: eval.go  reader.go  reader_test.go
history/doit-lisp/: .gitignore  Makefile  history1.txt  lexer.h  parser.c  test.c
history/goober-lisp/: env.sh  notes.md  repl.sh
history/goober-lisp/cmd/repl/: main.go  test.el
history/goober-lisp/goober/: builtin.go  eval_test.go  init.go
history/interp/: CHANGELOG.md
history/interp/src/interp/: lowlevel.clj
history/jib/: CHANGELOG.md  README.md  compiler-notes.org  std.jib
history/jib/doc/: intro.md
history/jib/doc/experiments/: compile.sh  target.s
history/jib/doc/experiments/example/: compile.sh  test.s
history/jib/jib-osx/jib-osx.xcodeproj/: project.pbxproj
history/jib/jib-osx/jib-osx.xcodeproj/project.xcworkspace/xcuserdata/ddcmhenry.xcuserdatad/: UserInterfaceState.xcuserstate
history/jib/runtime/: check_runtime.c  manual-gc-test.s
history/jib/src/jib/: analyze.clj  rt.clj
history/jib/test/jib/: analyze_test.clj
interp/: README.md  project.clj
interp/src/interp/: core.clj  highlevel.clj
interp/test/interp/: core_test.clj
jib/: .gitignore  project.clj  thoughts.org
jib/doc/experiments/: test.c  test.s
jib/doc/experiments/example/: runtime.c
jib/jib-osx/jib-osx.xcodeproj/project.xcworkspace/: contents.xcworkspacedata
jib/jib-osx/jib-osx.xcodeproj/xcuserdata/ddcmhenry.xcuserdatad/xcdebugger/: Breakpoints_v2.xcbkptlist
jib/jib-osx/jib-osx.xcodeproj/xcuserdata/ddcmhenry.xcuserdatad/xcschemes/: myscheme.xcscheme  xcschememanagement.plist
jib/runtime/: .gitignore  build.sh  runtime.c  runtime.h  test-gc.c  test-gc.s
jib/src/jib/: compile.clj  il.clj
jib/test/jib/: core_test.clj
src/: bytecode.c  core.lsp  errors.c  runtime.h  test.c
src/bootstrap/: analyzer.c  ast.c  ast.h  compiler.c  compiler.h  expander.h  lexer.h  pool.c  repl-main.c  repl.h  source.c  utils.c  utils.h
src/vm/: builtin.c  builtin.h  eval.c  eval.h  exception.c  exception.h  frame.c  frame.h  heap.c  heap.h  internal.h  symbol.c  symbol.h  value.c  value.h  vm.c
vm/: vm.c  vm.h
